--- a/api/package.json
+++ b/api/package.json
@@ -1,7 +1,7 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,6 +15,7 @@
     "@azure/openai": "^2.0.0",
     "@azure/storage-blob": "^12.29.1",
     "node-fetch": "^3.3.2",
+    "openai": "^6.6.0",
     "sharp": "^0.34.4",
     "stripe": "^19.1.0"
   }
