--- a/api/package.json
+++ b/api/package.json
@@ -1,21 +1,12 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "main": "",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "description": "",
+  "scripts": {
+    "start": "func start"
+  },
   "dependencies": {
-    "@azure/data-tables": "^13.2.1",
-    "@azure/functions": "^3.5.1",
-    "@azure/storage-blob": "^12.14.0",
-    "node-fetch": "^2.6.9",
-    "openai": "^4.20.1",
-    "sharp": "^0.32.6",
+    "@azure/functions": "^4.0.0",
     "stripe": "^12.18.0"
   }
 }
